daemon/gdm-session.c
@@ -906,8 +906,7 @@ worker_on_saved_language_name_read (GdmDBusWorker          *worker,
 {
         GdmSession *self = conversation->session;
 
-        if (strlen (language_name) > 0 &&
-            strcmp (language_name, get_default_language_name (self)) != 0) {
+        if (strlen (language_name) > 0) {
                 g_free (self->priv->saved_language);
                 self->priv->saved_language = g_strdup (language_name);
 
